tests/paczka2/big_fuzzy/22795171.err
Error in line 15: A817 A817 84,4
Error in line 16: 1Q8oI A817 34,3
Error in line 22: A817 S910 48,1
Error in line 24: h4j7l8NZE9 S476 86,2
Error in line 29: h4j7l8NZE9 A817 17,5
Error in line 28: A817 S931 13,5
Error in line 33: A817 S910 49,5
Error in line 56: 1Q8oI S931 46,7
Error in line 57: 1Q8oI S910 19,1
Error in line 48: E5hR S476 307,3
Error in line 65: k1i A817 36,5
Error in line 72: k1i S931 6,3
Error in line 70: 1Q8oI S931 42,4
Error in line 71: IGO A817 40,0
Error in line 98: k1i S931 73,3
Error in line 113: E5hR S476 8,1
Error in line 125: 1Q8oI S476 38,1
Error in line 128: 1Q8oI S910 26,1
Error in line 124: pg7GN S910 33,5
Error in line 136: pg7GN S931 75,8
Error in line 141: E5hR A817 80,6
Error in line 142: E5hR S476 37,6
Error in line 144: k1i S910 92,6
Error in line 156: h4j7l8NZE9 S931 62,7
Error in line 169: E5hR S931 87,7
Error in line 174: h4j7l8NZE9 S931 0,0
Error in line 172: pg7GN S931 98,2
Error in line 182: pg7GN A817 87,88
Error in line 160: IGO A817 153,0
Error in line 180: pg7GN S910 24,9
Error in line 184: 1Q8oI S910 82,2
Error in line 190: k1i A817 53,3
Error in line 193: k1i S476 3,2
Error in line 199: k1i A817 24,2
Error in line 211: E5hR S931 41,6
Error in line 208: A817 S910 83,7
Error in line 212: E5hR A817 70,7
Error in line 213: A817 S476 32,3
Error in line 227: E5hR S910 72,9
Error in line 231: h4j7l8NZE9 S910 41,1
Error in line 221: pg7GN A817 183,1
